--- a/TolkesentralenLH/TolkesentralenLH/Web.config
+++ b/TolkesentralenLH/TolkesentralenLH/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TolkesentralenDb"
-     connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename = |DataDirectory|TolkesentralenDb.mdf;Integrated Security=True"
-     providerName  ="System.Data.SqlClient"/>
+    <add name="TolkesentralenDb" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename = |DataDirectory|TolkesentralenDb.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="TolkesentralenDbEntities" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\TolkesentralenDb.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TolkesentralenDbEntities1" connectionString="metadata=res://*/Model3.csdl|res://*/Model3.ssdl|res://*/Model3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\TolkesentralenDb.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -61,7 +61,6 @@
         <databaseInitializer type="TolkesentralenLH.Models.SchoolInitializer, TolkesentralenLH" />
       </context>
     </contexts>
-    
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
@@ -70,6 +69,5 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
-    
   </entityFramework>
 </configuration>
