--- a/TolkesentralenLH/TolkesentralenLH/TolkesentralenLH.csproj
+++ b/TolkesentralenLH/TolkesentralenLH/TolkesentralenLH.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DbContextInitializer.cs" />
     <Compile Include="Models\DbNetcont.cs" />
     <Compile Include="Models\Fil.cs" />
     <Compile Include="Models\Oppdrag.cs" />
@@ -216,6 +217,7 @@
     <Content Include="Views\Kundes\RegTolk.cshtml" />
     <Content Include="Views\Kundes\ListTolk.cshtml" />
     <Content Include="Views\Kundes\RegSpraakPåTolk.cshtml" />
+    <Content Include="Views\Oppdrags\regOppdragOversettelse.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
